# linemod_apps

./: Dockerfile  README.md  ros_entrypoint.sh  run.sh
camera_sim/camera_sim_description/: CMakeLists.txt  package.xml
camera_sim/camera_sim_description/meshes/: xtion_collada.dae
camera_sim/camera_sim_description/urdf/: camera_sim.gazebo  camera_sim.xacro
camera_sim/camera_sim_gazebo/: CMakeLists.txt  package.xml
camera_sim/camera_sim_gazebo/launch/: camera_sim.launch
camera_sim/camera_sim_gazebo/worlds/: camera_sim.world
linemod_3dpose_estimator/: CMakeLists.txt  README.md  package.xml  set_simulator.sh
linemod_3dpose_estimator/data/: hemisphere_icosahedron.csv
linemod_3dpose_estimator/launch/: linemod.launch  linemod_pose_estimator.launch  viewpoint_planner.launch
linemod_3dpose_estimator/src/: linemod.cpp  viewpoint_planner.cpp
linemod_lib/: CMakeLists.txt  package.xml
linemod_lib/include/linemod_lib/: linemod_lib.h
linemod_lib/src/: linemod_lib.cpp
linemod_msgs/: CMakeLists.txt  package.xml
linemod_msgs/msg/: Scored2DBox.msg  Scored2DBoxArray.msg  Scored2DBoxMultiItemArray.msg
linemod_recognition/: CMakeLists.txt  package.xml
linemod_recognition/launch/: linemod.launch  linemod_2d.launch  linemod_no_depth.launch  online_template_creator.launch
linemod_recognition/src/: linemod.cpp  linemod_2d.cpp  linemod_no_depth.cpp  online_template_creator.cpp
linemod_recognition/templates/: pie4.yml
linemod_template/linemod_template_description/: CMakeLists.txt  package.xml
linemod_template/linemod_template_description/meshes/: mugcup.dae
linemod_template/linemod_template_description/urdf/: linemod_template.gazebo  linemod_template.urdf  linemod_template.urdf~  linemod_template.xacro
linemod_template/linemod_template_gazebo/: CMakeLists.txt  package.xml
linemod_template/linemod_template_gazebo/launch/: linemod_template.launch
