<?xml version="1.0"?>
<package>
  <name>linemod_3dpose_estimator</name>
  <version>0.0.0</version>
  <description>The linemod_3dpose_estimator package</description>
  <maintainer email="higashide@jsk.imi.i.u-tokyo.ac.jp">higashide</maintainer>
  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>tf</run_depend>

</package>
