<?xml version="1.0"?>
<package>
  <name>linemod_lib</name>
  <version>0.0.0</version>
  <description>linemod_lib</description>

  <maintainer email="higashide@jsk.imi.i.u-tokyo.ac.jp">higashide</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>linemod_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>linemod_msgs</run_depend>

</package>
