<?xml version="1.0"?>
<package>
  <name>linemod_msgs</name>
  <version>0.0.0</version>
  <description>The linemod_msgs package</description>
  <maintainer email="higashide@jsk.imi.i.u-tokyo.ac.jp">higashide</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
