<?xml version="1.0"?>
<package>
  <name>camera_sim_description</name>
  <version>0.0.0</version>
  <description>The camera_sim_description package</description>

  <maintainer email="higashide@jsk.imi.i.u-tokyo.ac.jp">higashide</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
</package>
